--- a/src/css/Music.css
+++ b/src/css/Music.css
@@ -21,6 +21,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgb(235, 235, 235);
+  background: linear-gradient(0deg,rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url('../images/loading-spin-min.gif');
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
